# wpfixcites

./: LICENSE  stack.yaml  wpfixcites.cabal
app/: Main.hs
src/Control/Lens/Text/: Extras.hs
src/Data/Text/Lens/: Extras.hs
src/Network/Mediawiki/: API.hs
src/Network/Mediawiki/API/: Lowlevel.hs
src/Text/Mediawiki/: ParseTree.hs  Wikipedia.hs
src/Text/Mediawiki/ParseTree/: Ref.hs
src/Text/XML/HXT/: PathFinder.hs
