name:                wpfixcites
version:             0.1.0.0
homepage:            https://github.com/greenrd/wpfixcites#readme
license:             BSD3
license-file:        LICENSE
author:              Robin Green
maintainer:          greenrd@greenrd.org
copyright:           2017 Robin Green
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Text.Mediawiki.Wikipedia
                     , Network.Mediawiki.API
                     , Network.Mediawiki.API.Lowlevel
                     , Text.Mediawiki.ParseTree
                     , Text.XML.HXT.PathFinder
                     , Data.Text.Lens.Extras
  build-depends:       aeson >= 0.11.3.0 && < 0.12
                     , base >= 4.7 && < 5
                     , bytestring
                     , classy-prelude >= 1.2.0
                     , concurrent-machines >= 0.2.3.3 && < 0.3
                     , http-client >= 0.4.31.2 && < 0.5
                     , http-client-tls
                     , hxt >= 9.3.1.16 && < 9.4
                     , lens >= 4.13 && <4.14
                     , lens-aeson
                     , machines >= 0.6.1 && <0.7
                     , network-uri >= 2.6.1 && <2.7
                     , text
                     , time
                     , wreq >= 0.4.1.0 && <0.5
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                     , OverloadedStrings

executable wpfixcites
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , classy-prelude
                     , optparse-applicative >= 0.12.1.0 && < 0.13
                     , wpfixcites
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                     , OverloadedStrings

source-repository head
  type:     git
  location: https://github.com/greenrd/wpfixcites
